--- a/sensu/pillar_map.jinja
+++ b/sensu/pillar_map.jinja
@@ -16,15 +16,15 @@
         'api': {
             'host': 'localhost',
             'port': 4567,
-            'user': 'admin',
-            'password': ''
+            'user': None,
+            'password': None
         },
         'rabbitmq': {
             'host': 'localhost',
             'port': 5672,
             'vhost': '/sensu',
             'user': 'sensu',
-            'password': ''
+            'password': None
         },
         'ssl': {
             'enable': False
@@ -34,19 +34,7 @@
             'port': 3000,
             'loglevel': 'info',
             'refresh': 10,
-            'stats': 10,
-            'users': [
-                {
-                'username': 'admin',
-                'password': 'secret',
-                'role': { 'readonly': False }
-                },
-                {
-                'username': 'guest',
-                'password': 'secret',
-                'role': { 'readonly': True }
-                }
-            ]
+            'stats': 10
         },
         'sites': [
             {
@@ -57,7 +45,7 @@
                 'insecure': False,
                 'path': '',
                 'user': 'admin',
-                'password': '',
+                'password': None,
                 'timeout': 5
             }
         ],
