Fixing handling of None for defaults

--- a/sensu/pillar_map.jinja
+++ b/sensu/pillar_map.jinja
@@ -24,7 +24,7 @@
             'port': 5672,
             'vhost': '/sensu',
             'user': 'sensu',
-            'password': None
+            'password': ''
         },
         'ssl': {
             'enable': False
@@ -44,8 +44,8 @@
                 'ssl': False,
                 'insecure': False,
                 'path': '',
-                'user': 'admin',
-                'password': None,
+                'user': '',
+                'password': '',
                 'timeout': 5
             }
         ],
